k8s/kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: kafka
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 1001
      containers:
        - name: kafka
          image: apache/kafka:latest
          ports:
            - containerPort: 9092
              name: broker
            - containerPort: 9093
              name: controller
            - containerPort: 9094
              name: external
          volumeMounts:
            - name: kafka-data
              mountPath: /kafka/data
          livenessProbe:
            exec:
              command:
                - /opt/kafka/bin/kafka-broker-api-versions.sh
                - --bootstrap-server
                - localhost:9092
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5

  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
