k8s/debezium-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debezium-ui
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: debezium-ui
  ports:
    - port: 8080
      targetPort: 8080
