k8s/kafka-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: external
      port: 9094
      targetPort: 9094
  type: ClusterIP
