k8s/debezium-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debezium-ing
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: debezium.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debezium-ui
                port:
                  number: 8080
